--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: app
+    ports:
+      - '8080:8080'
     depends_on:
       - db
     environment:
